--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "preact-render-spy": "^1.2.1"
   },
   "dependencies": {
+    "firebase": "^5.7.2",
+    "linkstate": "^1.1.1",
     "preact": "^8.2.6",
     "preact-compat": "^3.17.0",
     "preact-router": "^2.5.7"
