--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "linkstate": "^1.1.1",
     "preact": "^8.2.6",
     "preact-compat": "^3.17.0",
-    "preact-router": "^2.5.7"
+    "preact-router": "^2.5.7",
+    "styled-components": "^3.4.10"
   },
   "jest": {
     "verbose": true,
