--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "linkstate": "^1.1.1",
     "preact": "^8.2.6",
     "preact-compat": "^3.17.0",
+    "preact-helmet": "^4.0.0-alpha-3",
     "preact-router": "^2.5.7",
     "styled-components": "^3.4.10"
   },
