--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "ccz-www",
-  "short_name": "ccz-www",
+  "name": "concrezan",
+  "short_name": "concrezan",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#fff",
-  "theme_color": "#673ab8",
+  "theme_color": "#07005A",
   "icons": [
     {
       "src": "/assets/icons/android-chrome-192x192.png",
