--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "per-env",
     "start:production": "npm run -s serve",
     "start:development": "npm run -s dev",
-    "build": "preact build",
-    "serve": "preact build && preact serve",
+    "build": "preact build --no-service-worker --template src/template.html",
+    "serve": "preact build --no-service-worker --template src/template.html && preact serve",
     "dev": "preact watch",
     "lint": "eslint src",
     "test": "jest"
@@ -23,10 +23,11 @@
     "eslint": "^4.9.0",
     "eslint-config-synacor": "^2.0.2",
     "identity-obj-proxy": "^3.0.0",
-    "per-env": "^1.0.2",
     "jest": "^21.2.1",
+    "per-env": "^1.0.2",
     "preact-cli": "^2.1.0",
-    "preact-render-spy": "^1.2.1"
+    "preact-render-spy": "^1.2.1",
+    "workbox-webpack-plugin": "^3.6.3"
   },
   "dependencies": {
     "firebase": "^5.7.2",
