Service worker config applied

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "concrezan",
-  "short_name": "concrezan",
+  "name": "Concrezan",
+  "short_name": "Concrezan",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
