--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,7 +4,7 @@
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
-  "background_color": "#fff",
+  "background_color": "#07005A",
   "theme_color": "#07005A",
   "icons": [
     {
